@@ -40,6 +40,7 @@ include($this['path']->path('layouts:template.config.php'));
                 <script type="text/javascript" src="main/libs/js/cultibox-utils.js"></script>
                 <script type="text/javascript" src="main/libs/js/oXHR.js"></script>
                 <script type="text/javascript" src="main/libs/js/fullcalendar.js"></script>
+                <script type="text/javascript" src="main/libs/js/jquery.blockUI.js"></script>
 </head>
 
 <body id="page" class="page <?php echo $this['config']->get('body_classes'); ?>" data-config='<?php echo $this['config']->get('body_config','{}'); ?>'>
